--- a/app/index.html
+++ b/app/index.html
@@ -1,14 +1,16 @@
 <!doctype html>
-<html lang="en" ng-app>
-  <head>
-    <meta charset="utf-8">
-    <title>My HTML File</title>
-    <link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap.css" />
-    <script src="lib/angular/angular.js"></script>
-  </head>
-  <body>
-
-    <p>Nothing here {{'yet' + '!'}}</p>
-
-  </body>
+<html lang="en" ng-app="marketApp">
+    <head>
+        <meta charset="utf-8">
+        <title>Market App</title>
+        <link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap.css" />
+        <script src="lib/angular/angular.js"></script>
+        <script src="lib/angular-route/angular-route.js"></script>
+        <script src="app.module.js"></script>
+        <script src="market-list/market-list.module.js"></script>
+        <script src="market-list/market-list.component.js"></script>
+    </head>
+    <body>
+        <market-list></market-list>
+    </body>
 </html>
