--- a/app/index.html
+++ b/app/index.html
@@ -7,10 +7,13 @@
         <script src="lib/angular/angular.js"></script>
         <script src="lib/angular-route/angular-route.js"></script>
         <script src="app.module.js"></script>
+        <script src="nav-bar/nav-bar.module.js"></script>
+        <script src="nav-bar/nav-bar.component.js"></script>
         <script src="market-list/market-list.module.js"></script>
         <script src="market-list/market-list.component.js"></script>
     </head>
     <body>
+        <nav-bar></nav-bar>
         <market-list></market-list>
     </body>
 </html>
