Add filters to market-list and change color to nav-bar

--- a/app/index.html
+++ b/app/index.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <title>Market App</title>
         <link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap.css" />
+        <link rel="stylesheet" href="nav-bar/nav-bar.style.css">
         <script src="lib/angular/angular.js"></script>
         <script src="lib/angular-route/angular-route.js"></script>
         <script src="app.module.js"></script>
