--- a/app/market-list/market-list.template.html
+++ b/app/market-list/market-list.template.html
@@ -1,23 +1,38 @@
 <div class="container">
     <div class="row">
+        <h1>Market Summaries 24HRS</h1>
         <div class="col-12">
-            <div class="row">
-                <div class="col-md-6">
-                   <div class="form-group">
-                       <label for="limit">Type a markets quantity</label>
-                       <input type="text" ng-model="$ctrl.limit" class="form-control">
-                   </div>
+            <div class="panel panel-default">
+                <div class="panel-body">
+                    <div class="row">
+                        <div class="col-md-4">
+                            <div class="form-group">
+                                <label for="limit">Search</label>
+                                <input type="text" ng-model="$ctrl.query" class="form-control">
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="form-group">
+                                <label for="limit">Markets quantity</label>
+                                <input type="number" ng-model="$ctrl.limit" class="form-control" min="0" max="{{ $ctrl.markets.length }}">
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="form-group">
+                                <label for="orderBy">Order by</label>
+                                <select name="orderBy" ng-model="$ctrl.orderProp" class="form-control">
+                                    <option value="-Created">Newest</option>
+                                    <option value="-Volume">Volume</option>
+                                </select>
+                            </div>
+                        </div>
+                    </div>    
                 </div>
-                <div class="col-md-6">
-                    <div class="form-group">
-                        <label for="orderBy">Order by</label>
-                        <select name="orderBy" ng-model="$ctrl.orderProp" class="form-control">
-                            <option value="-Created">Newest</option>
-                            <option value="-Volume">Volume</option>
-                        </select>
-                    </div>
-                </div>
-            </div>                       
+            </div>                               
+        </div>
+        <div class="col-12">
+            <h4>{{ $ctrl.limit }} markets records of {{ $ctrl.markets.length }}</h4>
+            <hr></hr>
         </div>
         <div class="col-12">
             <table class="table table-hover">
@@ -59,7 +74,7 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr ng-repeat="market in $ctrl.markets | orderBy:$ctrl.orderProp | limitTo: $ctrl.limit">
+                    <tr ng-repeat="market in $ctrl.markets | filter: $ctrl.query  | orderBy: $ctrl.orderProp | limitTo: $ctrl.limit">
                         <td>
                             {{ market.MarketName }}
                         </td>
