--- a/app/index.html
+++ b/app/index.html
@@ -10,6 +10,8 @@
         <script src="lib/angular-route/angular-route.js"></script>
         <script src="app.module.js"></script>
         <script src="app.config.js"></script>
+        <script src="core/core.module.js"></script>
+        <script src="core/scientific-to-decimal/scientific-to-decimal.filter.js"></script>
         <script src="nav-bar/nav-bar.module.js"></script>
         <script src="nav-bar/nav-bar.component.js"></script>
         <script src="market-list/market-list.module.js"></script>
@@ -19,8 +21,7 @@
 
     </head>
     <body>
-        <nav-bar></nav-bar> 
-        
+        <nav-bar></nav-bar>         
         <section ng-view></section>
     </body>
 </html>
