--- a/app/index.html
+++ b/app/index.html
@@ -6,6 +6,7 @@
         <link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap.css" />
         <link rel="stylesheet" href="nav-bar/nav-bar.style.css">
         <link rel="stylesheet" href="market-list/market-list.style.css">
+        <link rel="stylesheet" href="market-detail/market-detail.style.css">
         <script src="lib/angular/angular.js"></script>
         <script src="lib/angular-route/angular-route.js"></script>
         <script src="app.module.js"></script>
@@ -18,7 +19,6 @@
         <script src="market-list/market-list.component.js"></script>
         <script src="market-detail/market-detail.module.js"></script>
         <script src="market-detail/market-detail.component.js"></script>
-
     </head>
     <body>
         <nav-bar></nav-bar>         
