--- a/app/market-list/market-list.template.html
+++ b/app/market-list/market-list.template.html
@@ -22,7 +22,10 @@
                                 <label for="orderBy">Order by</label>
                                 <select name="orderBy" ng-model="$ctrl.orderProp" class="form-control">
                                     <option value="-Created">Newest</option>
-                                    <option value="-Volume">Volume</option>
+                                    <option value="-Volume">Top Volume</option>
+                                    <option value="-High">Top High</option>
+                                    <option value="-Low">Top Low</option>
+                                    <option value="-Last">Top Last Price</option>
                                 </select>
                             </div>
                         </div>
@@ -52,22 +55,7 @@
                         </th>
                         <th>
                             Last
-                        </th>               
-                        <!-- <th>
-                            Bid
-                        </th>
-                        <th>
-                            Ask
-                        </th>
-                        <th>
-                            Open Buy Orders
-                        </th>
-                        <th>
-                            Open Sell Orders
-                        </th>
-                        <th>
-                            Prev Day
-                        </th> -->
+                        </th>                                     
                         <th>
                             Added
                         </th>
@@ -89,22 +77,7 @@
                         </td>
                         <td>
                             {{ market.Last | scientificToDecimal }}
-                        </td>               
-                        <!-- <td>
-                            {{ market.Bid | scientificToDecimal}}
-                        </td>
-                        <td>
-                            {{ market.Ask | scientificToDecimal}}
-                        </td>
-                        <td>
-                            {{ market.OpenBuyOrders }}
-                        </td>
-                        <td>
-                            {{ market.OpenSellOrders }}
-                        </td>
-                        <td>
-                            {{ market.PrevDay | scientificToDecimal}}
-                        </td> -->
+                        </td>                                       
                         <td>
                             {{ market.Created | date : format : timezone}}
                         </td>
