--- a/app/nav-bar/nav-bar.template.html
+++ b/app/nav-bar/nav-bar.template.html
@@ -1,13 +1,13 @@
-<nav class="navbar navbar-default navbar-yellow">
+<nav class="navbar navbar-default navbar-blue">
     <div class="container-fluid">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                <span class="sr-only">Toggle navigation</span>
+                <span class="sr-only">Market App</span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">Market App</a>
+            <a class="navbar-brand navbar-title" href="#">Market App</a>
         </div>
     </div>
 </nav>
